--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@
 :root {
     --purple-1: #925bc8;
     --purple-2: #511690;
+    --background: #fafafa;
+    --body: #f5f5f5;
+    --color: #33204b;
+    --shadow: rgb(51 51 79 / 6%);
 }
 
 body.dark {
@@ -12,17 +16,9 @@ body.dark {
     --shadow: rgb(62 62 62);
 }
 
-body.light {
-    --background: #fff;
-    --body: #f8f8f7;
-    --color: #33204b;
-    --shadow: rgb(51 51 79 / 6%);
-}
-
 * {
     margin: 0;
     padding: 0;
-    transition: .2s ease;
     scroll-behavior: smooth;
     color: var(--color);
     font-family: Inter, system-ui, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
@@ -150,14 +146,16 @@ nav .btn {
     border-radius: 6px;
     border-right: 4px solid var(--background);
     border-left: 4px solid var(--background);
+    transition: .2s ease;
 }
 
 .voters {
     overflow: auto;
 }
 
-.leaderboard .row.voter{
+.leaderboard .row.voter {
     max-width: 1020px;
+    min-width: 720px;
 }
 
 .row.voter {
@@ -188,7 +186,9 @@ nav .btn {
     background: linear-gradient(270deg, var(--background), var(--purple-1));
 }
 
-.row.heading{
+.row.heading {
+    box-shadow: 0 0 24px 6px var(--shadow);
+    font-weight: bold;
     border: none;
     border-bottom: 4px solid var(--purple-1);
 }
