--- a/style/style.css
+++ b/style/style.css
@@ -177,8 +177,8 @@ nav .btn {
 
 .row.live,
 .row.you {
-    border-left-color: var(--purple-1);
-    background: linear-gradient(270deg, var(--background), var(--purple-1));
+    border: 2px solid var(--purple-1);
+    border-left-width: 4px;
 }
 
 .row.heading {
@@ -198,6 +198,7 @@ nav .btn {
     border-radius: 0 0 40px 40px;
     padding: 0px 34px;
     min-height: 34px;
+    box-shadow: 0px 2px 4px 0px var(--purple-2);
 }
 
 .row .section {
