--- a/style/style.css
+++ b/style/style.css
@@ -146,7 +146,7 @@ nav .btn {
     border-radius: 6px;
     border-right: 4px solid var(--background);
     border-left: 4px solid var(--background);
-    transition: .2s ease;
+    transition: 0.2s ease;
 }
 
 .voters {
@@ -160,7 +160,7 @@ nav .btn {
 }
 
 .row:not(.voter) {
-    padding: 2em .5em 1em;
+    padding: 2em 0.5em 1em;
 }
 
 .row.voter img {
@@ -253,6 +253,36 @@ nav .btn {
     border-right: 4px solid rgb(185, 0, 0);
 }
 
+.loader {
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 9999;
+    background: var(--background);
+}
+
+.loader span {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 4px solid transparent;
+    border-right-color: var(--purple-1);
+    border-left-color: var(--purple-1);
+    animation: spin 1s ease infinite;
+    transition: 0.2s ease;
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loader.finish span {
+    transform: scale(50);
+}
+
 @media screen and (max-width:1020px) {
     .row:not(.voter) {
         flex-direction: column;
@@ -300,5 +330,14 @@ nav .btn {
     nav.active .buttons {
         padding: 1em;
         height: auto;
+    }
+}
+
+@media only screen and (max-width: 740px) {
+    .filters {
+        flex-direction: column;
+        align-items: stretch;
+        border-radius: 0 0 40px 40px;
+        width: 100%;
     }
 }
